--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Drew Loveland
 description: Systems Engineer with SIS - a Converge Company 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://drewloveland.github.io/images/mahomes1.jpg
 #
 # Flags below are optional
 #
