--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,13 @@ kramdown:
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
   syntax_highlighter: rouge
   syntax_highlighter_opts:
+    default_lang: csharp
     # Use existing pygments syntax highlighting css
     css_class: 'highlight'
+    span:
+      line_numbers: false
+    block:
+      line_numbers: true
 
 # Set the Sass partials directory, as we're using @imports
 sass:
