--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ kramdown:
     span:
       line_numbers: false
     block:
-      line_numbers: true
+      line_numbers: false
 
 # Set the Sass partials directory, as we're using @imports
 sass:
